--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "iconsax-react-native": "^0.0.8",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "18.2.0",
@@ -21,7 +23,10 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.3.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,6 +37,7 @@
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
