--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,12 +83,26 @@ android {
         versionName "1.0"
     }
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+       debug {
+        // storeFile file('debug.keystore')
+        // storePassword 'android'
+        // keyAlias 'androiddebugkey'
+        // keyPassword 'android'
+
+         storeFile file(MYAPP_UPLOAD_STORE_FILE)
+         storePassword MYAPP_UPLOAD_STORE_PASSWORD
+         keyAlias MYAPP_UPLOAD_KEY_ALIAS
+         keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+    }
+
+    release {
+        if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            storePassword MYAPP_UPLOAD_STORE_PASSWORD
+            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
         }
+    }
     }
     buildTypes {
         debug {
@@ -107,7 +121,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+    implementation ("com.google.android.gms:play-services-auth:21.1.1")
+    implementation ("androidx.browser:browser:1.8.0-beta02")
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
