--- a/ios/EventHub/Info.plist
+++ b/ios/EventHub/Info.plist
@@ -2,6 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+    <array>
+    <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+        <string>com.googleusercontent.apps.4615982941-qdn70ll57703ffaumu66kqeojkdjumql</string>
+        <string>com.googleusercontent.apps.4615982941-km33ccenehsbbo5fuv11otmqqjv57o7j</string>
+        </array>
+    </dict>
+    </array>
+    <key>GIDClientID</key>
+    <string>4615982941-km33ccenehsbbo5fuv11otmqqjv57o7j.apps.googleusercontent.com</string>
+    <key>GIDRedirectURI</key>
+    <string>com.googleusercontent.4615982941-km33ccenehsbbo5fuv11otmqqjv57o7j:/oauth2redirect/google</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
